--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -1,6 +1,6 @@
 body, html{
-    background-color: #d3d3d3;
-    color: black;
+    background-color: #141414;
+    color: white;
     height: 100%;
     width: 100%;
     margin: 0px;
@@ -24,13 +24,32 @@ body, html{
 }
 #navbar li a{
     display: block;
-    color: black;
+    background-color: #1d1d1d;
+    color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
 
 }
 #navbar a:hover{
-    background-color: #636363;
+    background-color: #0e163c;
     color: white;
+}
+#output-window-border{
+    padding: 16px;
+}
+
+#output-window{
+    width: 100%;
+    height: 500px;
+    border: 1px solid white;
+    border-color: white;
+    padding: 6px;
+}
+#output-window p{
+    font-family: 'Ubuntu', 'Lucida Grande', 'Lucida Sans Unicode', 'Geneva', 'Verdana', sans-serif;
+    color: lime;
+    font-size: 16px;
+    padding: 0px;
+    margin: 0px;
 }
