--- a/templates/base.html
+++ b/templates/base.html
@@ -6,14 +6,14 @@
   <header>
   <nav id="navbar">
         <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="#">About</a></li>
             {% if current_user.id != null %}
-
-                <li><a href="/protected">{{ current_user.id }}</a></li>
-                <li><a href="/logout">Logout</a></li>
+                <li style="width: 33.33%;"><a href="/protected">{{ current_user.id }}</a></li>
+                <li style="width: 33.33%;"><a href="/settings">Settings</a></li>
+                <li style="width: 33.33%;"><a href="/logout">Logout</a></li>
             {% endif %}
             {% if current_user.id == null %}
+                <li><a href="/">Home</a></li>
+                <li><a href="#">About</a></li>
                 <li><a href="/login">Login</a></li>
                 <li><a href="/register">Register</a></li>
             {% endif %}
