--- a/templates/login.html
+++ b/templates/login.html
@@ -5,8 +5,9 @@
 {% endblock %}
 
 {% block content %}
-  <form method="post">
-    <label for="username">Username</label>
+    <h1>{{ msg }}</h1>
+  <form method="post" action="{{ url_for('login') }}">
+    <label for="email">Email</label>
     <input name="email" id="email" required>
     <label for="password">Password</label>
     <input type="password" name="password" id="password" required>
