--- a/templates/register.html
+++ b/templates/register.html
@@ -5,10 +5,12 @@
 {% endblock %}
 
 {% block content %}
-    <h1>Register is disabled atm</h1>
-  <form method="post">
+    <h1>{{ msg }}</h1>
+  <form action="{{ url_for('register') }}" method="POST">
     <label for="username">Username</label>
     <input name="username" id="username" required>
+    <label for="email">Email</label>
+    <input name="email" id="email" required>
     <label for="password">Password</label>
     <input type="password" name="password" id="password" required>
     <input type="submit" value="Register">
